--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pvp.io",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Начало работы",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -12,5 +12,6 @@
   "dependencies": {
     "express": "^4.16.3",
     "socket.io": "^2.1.0"
-  }
+  },
+  "keywords": []
 }
