--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "mysql2": "^3.6.3",
     "socket.io": "^2.1.0"
   },
   "keywords": []
