--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cron": "^3.1.6",
     "express": "^4.16.3",
     "mysql2": "^3.6.3",
     "socket.io": "^2.1.0"
