--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cron": "^3.1.6",
     "express": "^4.16.3",
     "mysql2": "^3.6.3",
-    "socket.io": "^2.1.0"
+    "socket.io": "^2.1.0",
+    "zlib": "^1.0.5"
   },
   "keywords": []
 }
